--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -122,7 +122,7 @@ hanno due possibilità:
  interviene solo in caso di guasto. Per esempio, per avere la correttezza si
  potrebbe  avere che a una determinata richiesta rispondano tutte le macchine,
  ma la risposta viene controllata prima di essere fornita.
- \item opure si realizza un \textit{sistema con cluster}, dove si aggiunge una
+ \item oppure si realizza un \textit{sistema con cluster}, dove si aggiunge una
  logica di controllo che è in grado di stabilire se una risorsa è disponibile o
  meno, e  quindi è in grado di escluderla dal sistema. Al crescere delle risorse
  aumenta la probabilità di guasti, quindi si devono utilizzare algoritmi
