Revisione QoS e Replicazione

--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -114,7 +114,7 @@ gestione del servizio) e quello del management sono accoppiati, ma dovrebbero es
 condividere il minor numero di risorse. Il problema di Internet è che siamo sempre in piano utente, e quindi è
 difficile capire se ci sono problemi.
 Il piano del management in realtà può essere scomposto in diverse sottoparti, a seconda di cosa si vuole gestire: vi
-è una parte per l'identicazione di fault e recovery delle risorse, una parte per il controllo della performance
+è una parte per l'identificazione di fault e recovery delle risorse, una parte per il controllo della performance
 (quindi eventuali aggiustamenti del servizio per poter garantire la QoS). Altri settori fondamentali riguardano
 l'accounting e la sicurezza dei servizi.
 
