--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -228,7 +228,7 @@ L'idea è che se $a \rightarrow b$, allora si ha che il tempo dell'evento a è m
 a \rightarrow b \Rightarrow T S(a) < T S(b)
 \end{equation}
 Questa è la condizione di clock logico, il quale può solo crescere. Si tratta di realizzare quindi una sorta di
-timestamp, per identicare in maniera univoca gli eventi nel sistema!
+timestamp, per identificare in maniera univoca gli eventi nel sistema!
 Nel caso di una trasmissione, per cui $a \in P_i$ e $b \in P_j$ , si definisce la relazione di clock logico:
 \begin{equation}
 a \rightarrow b \Rightarrow LC_i (a) < LC_i (b)
