--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -49,7 +49,7 @@ per poter semplicare il trattamento del recovery. Per poter definire ciò, è ne
 
 L'obiettivo è quindi che il TTR sia inferiore in maniera stretta al (M)TBF.
 Mediante l'ipotesi del guasto singolo, si può osservare che se abbiamo più copie in grado di fornire il servizio, si
-può specificare il numero di fault tollerabili e identicabili. Se avessimo solo due copie, non possiamo tollerare un
+può specificare il numero di fault tollerabili e identificabili. Se avessimo solo due copie, non possiamo tollerare un
 guasto, ma possiamo identificarne uno. Con già 3 copie, un guasto si può tollerare,
 perché comunque restano due macchine con cui identificare i guasti successivi:
 si riescono così ad identificare 2 guasti. La generalizzazione è che se si
@@ -98,9 +98,9 @@ I guasti si possono anche classificare in base alla loro riconoscibilità da un
 sistema (processore esterno):
 \begin{itemize}
  \item \textit{Fail-stop}: un processore si ferma perché non rispetta un
- invariante, e questo viene identicato dagli  altri processori
+ invariante, e questo viene identificato dagli  altri processori
  \item \textit{Fail-safe}: come il precedente, tranne che gli altri processori
- non se ne accorgono: in questo caso quindi non è identicato, ma potrebbe
+ non se ne accorgono: in questo caso quindi non è identificato, ma potrebbe
 essere tollerato (dipende dall'architettura stessa).
  \item \textit{Fallimento di tipo bizantino}: il processore termina presentando
 però comportamenti assolutamente casuali.
@@ -126,7 +126,7 @@ hanno due possibilità:
  logica di controllo che è in grado di stabilire se una risorsa è disponibile o
  meno, e  quindi è in grado di escluderla dal sistema. Al crescere delle risorse
  aumenta la probabilità di guasti, quindi si devono utilizzare algoritmi
- efficienti per identicarli correttamente: si vuole un \textit{metalivello
+ efficienti per identificarli correttamente: si vuole un \textit{metalivello
  efficiente}!
 \end{enumerate}
 
@@ -164,7 +164,8 @@ Ipotizzare guasti singoli semplifica la realizzazione dei protocolli, per
 esempio.
 
 Una possibile realizzazione è un sistema tandem, cioè in cui tutto è raddoppiato: l'idea è quella di realizzare un
-sistema fail-safe, per cui una CPU identica l'errore. Ovviamente, un sistema del genere è complesso e costoso.
+sistema fail-safe, per cui una CPU identifica l'errore. Ovviamente, un sistema
+del genere è complesso e costoso.
 \subsection{Copie calde e copie fredde}
 Vi sono due possibili modelli per la replicazione, e dipendono dal comportamento delle copie:
 \begin{itemize}
